--- a/ParasyteMain/package.json
+++ b/ParasyteMain/package.json
@@ -1,51 +1,54 @@
 {
-  "name": "parasytemain",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
-    "syncSubmodules": "node scripts/syncSubmodules.js ",
-    "test": "jest",
-    "lint": "eslint ."
-  },
-  "dependencies": {
-    "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/native": "^5.9.4",
-    "@react-navigation/stack": "^5.14.5",
-    "react": "17.0.1",
-    "react-native": "0.64.2",
-    "react-native-gesture-handler": "^1.10.3",
-    "react-native-reanimated": "^2.2.0",
-    "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.4.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "7.14.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.64.0",
-    "react-test-renderer": "17.0.1"
-  },
-  "jest": {
-    "preset": "react-native"
-  },
-  "submodules": {
-    "ParasyteA": {
-      "name":"ParasyteA",
-      "path": "src/modules",
-      "origin": "https://github.com/RenatoMartinsFerreira/ParasyteA.git",
-      "tag": "v0.0.1"
-    },
-    "ParasyteB": {
-      "name":"ParasyteB",
-      "path": "src/modules",
-      "origin": "https://github.com/RenatoMartinsFerreira/ParasyteB.git",
-      "tag": "v0.0.2"
-    }
-  }
+	"name": "parasytemain",
+	"version": "0.0.1",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"android": "react-native run-android",
+		"ios": "react-native run-ios",
+		"start": "react-native start",
+		"syncSubmodules": "node scripts/syncSubmodules.js",
+		"addParasyte": "node scripts/addParasyte.js",
+		"removeParasyte": "node scripts/removeParasyte.js",
+		"test": "jest",
+		"lint": "eslint ."
+	},
+	"dependencies": {
+		"@react-native-community/masked-view": "^0.1.11",
+		"@react-navigation/native": "^5.9.4",
+		"@react-navigation/stack": "^5.14.5",
+		"react": "17.0.1",
+		"react-native": "0.64.2",
+		"react-native-gesture-handler": "^1.10.3",
+		"react-native-reanimated": "^2.2.0",
+		"react-native-safe-area-context": "^3.2.0",
+		"react-native-screens": "^3.4.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.12.9",
+		"@babel/runtime": "^7.12.5",
+		"@react-native-community/eslint-config": "^2.0.0",
+		"babel-jest": "^26.6.3",
+		"eslint": "7.14.0",
+		"jest": "^26.6.3",
+		"metro-react-native-babel-preset": "^0.64.0",
+		"react-test-renderer": "17.0.1"
+	},
+	"jest": {
+		"preset": "react-native"
+	},
+	"submodules": {
+		"ParasyteA": {
+			"name": "ParasyteA",
+			"path": "src/modules",
+			"origin": "https://github.com/RenatoMartinsFerreira/ParasyteA.git",
+			"tag": "v0.0.1"
+		},
+		"ParasyteB": {
+			"name": "ParasyteB",
+			"path": "src/modules",
+			"origin": "https://github.com/RenatoMartinsFerreira/ParasyteB.git",
+			"tag": "v0.0.2"
+		}
+	}
 }
