--- a/ParasyteMain/package.json
+++ b/ParasyteMain/package.json
@@ -48,7 +48,7 @@
 			"name": "ParasyteB",
 			"path": "src/modules",
 			"origin": "https://github.com/RenatoMartinsFerreira/ParasyteB.git",
-			"tag": "main"
+			"tag": "v0.0.1"
 		}
 	}
 }
